# onlyoffice-documentserver-ports

./: Makefile  README.md  distinfo  github_dep  pkg-plist  todo  v8_fetch.sh
files/: extra-patch-pkg-fetch_patches_node.v16.13.0.cpp.patch  extra-patch-pkg-fetch_patches_node.v18.18.2.cpp.patch  npm  onlyoffice-documentserver.ucl.in  patch-build__tools_automate.py  patch-build__tools_build.pro  patch-build__tools_configure.py  patch-build__tools_make.py  patch-build__tools_make__packages.py  patch-build__tools_scripts_base.py  patch-build__tools_scripts_build.py  patch-build__tools_scripts_build__js.py  patch-build__tools_scripts_build__server.py  patch-build__tools_scripts_config.py  patch-build__tools_scripts_core__common_make__common.py  patch-build__tools_scripts_core__common_modules_hunspell.py  patch-build__tools_scripts_core__common_modules_v8.py  patch-build__tools_scripts_deploy.py  patch-build__tools_scripts_deploy__builder.py  patch-build__tools_scripts_deploy__core.py  patch-build__tools_scripts_deploy__desktop.py  patch-build__tools_scripts_deploy__mobile.py  patch-build__tools_scripts_deploy__server.py  patch-build__tools_scripts_packages.py  patch-build__tools_scripts_packages__desktop.py  patch-build__tools_sln.json  patch-build__tools_tools_freebsd_automate.py  patch-core-Port-to-FreeBSD.patch  patch-core_ASCOfficeDocFile_DocDocxConverter_StringTable.h  patch-core_ASCOfficeRtfFile_RtfFormatLib_source_Utils.h  patch-core_ASCOfficeXlsFile2_source_XlsFormat_Auxiliary_HelpFunc.cpp  patch-core_ASCOfficeXlsFile2_source_XlsFormat_Crypt_rtl_cipher.h  patch-core_ASCOfficeXlsFile2_source_XlsFormat_Crypt_rtl_digest.h  patch-core_ASCOfficeXlsFile2_source_XlsFormat_Logic_Biff__structures_BitMarkedStructs.h  patch-core_Common_3dParty_cryptopp_project_cryptopp.pro  patch-core_Common_3dParty_html_css_src_StyleProperties.cpp  patch-core_Common_3dParty_icu_icu.pri  patch-core_Common_3dParty_v8_v8.pri  patch-core_Common_3dParty_v8_v8_BUILD.gn  patch-core_Common_3dParty_v8_v8__xp_v8.pri  (+81 more)
files/packagejsons/document-server-integration/web/documentserver-example/nodejs/: package-lock.json
files/packagejsons/server/Common/: package-lock.json  package.json
files/packagejsons/server/DocService/: package-lock.json  package.json
files/packagejsons/server/FileConverter/: package-lock.json  package.json
files/packagejsons/server/Metrics/: package-lock.json  package.json
