--- core/Common/3dParty/v8/v8/build/config/compiler/compiler.gni.orig	2021-12-08 18:23:10 UTC
+++ core/Common/3dParty/v8/v8/build/config/compiler/compiler.gni
@@ -122,7 +122,7 @@ declare_args() {
 declare_args() {
   # Whether to use the gold linker from binutils instead of lld or bfd.
   use_gold =
-      !use_lld && !(is_chromecast && is_linux &&
+      !is_bsd && !use_lld && !(is_chromecast && is_linux &&
                     (current_cpu == "arm" || current_cpu == "mipsel")) &&
       ((is_linux && (current_cpu == "x64" || current_cpu == "x86" ||
                      current_cpu == "arm" || current_cpu == "mipsel")) ||
