--- core/Common/3dParty/v8/v8/build/config/freetype/freetype.gni.orig	2021-12-08 18:23:10 UTC
+++ core/Common/3dParty/v8/v8/build/config/freetype/freetype.gni
@@ -10,5 +10,5 @@ declare_args() {
   # than version 2.7.1 and have color bitmap support compiled in. WARNING:
   # System FreeType configurations other than as described WILL INTRODUCE TEXT
   # RENDERING AND SECURITY REGRESSIONS.
-  use_system_freetype = false
+  use_system_freetype = true
 }
