--- core/Common/3dParty/v8/v8/build/toolchain/linux/BUILD.gn.orig	2021-12-08 18:23:10 UTC
+++ core/Common/3dParty/v8/v8/build/toolchain/linux/BUILD.gn
@@ -14,7 +14,6 @@ clang_toolchain("clang_arm") {
 }
 
 clang_toolchain("clang_arm64") {
-  toolprefix = "aarch64-linux-gnu-"
   toolchain_args = {
     current_cpu = "arm64"
     current_os = "linux"
