--- core/Common/3dParty/v8/v8/buildtools/third_party/libc++/BUILD.gn.orig	2021-12-10 13:09:41 UTC
+++ core/Common/3dParty/v8/v8/buildtools/third_party/libc++/BUILD.gn
@@ -23,6 +23,7 @@ config("config") {
     cflags += [
       "-fPIC",
       "-std=c++17",
+      "-I/usr/local/include",
     ]
   }
 }
